add: topic produce monitor

--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -10,14 +10,14 @@
                 <a href="/" class="navbar-brand">
                     Kafka&nbsp;<span style="font-weight:bold">Eagle</span>
                 </a>
-                <form class="search-form">
-                    <div class="input-group">
-                        <div class="input-group-text">
-                            <i data-feather="search"></i>
-                        </div>
-                        <input type="text" class="form-control" id="navbarForm" placeholder="Search here..." th:placeholder="#{kafka.eagle.dataspace.search}">
-                    </div>
-                </form>
+<!--                <form class="search-form">-->
+<!--                    <div class="input-group">-->
+<!--                        <div class="input-group-text">-->
+<!--                            <i data-feather="search"></i>-->
+<!--                        </div>-->
+<!--                        <input type="text" class="form-control" id="navbarForm" placeholder="Search here..." th:placeholder="#{kafka.eagle.dataspace.search}">-->
+<!--                    </div>-->
+<!--                </form>-->
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button"
