add: profile view

--- a/efak-web/src/main/resources/templates/public/header.html
+++ b/efak-web/src/main/resources/templates/public/header.html
@@ -55,7 +55,7 @@
                                         <p class="tx-12" th:text="#{kafka.eagle.header.manager.change}">Manager</p></a>
                                 </div>
                                 <div class="col-3 text-center">
-                                    <a href="#"
+                                    <a href="/system/profile"
                                        class="dropdown-item d-flex flex-column align-items-center justify-content-center wd-70 ht-70"><i
                                             data-feather="instagram" class="icon-lg mb-1"></i>
                                         <p class="tx-12" th:text="#{kafka.eagle.header.profile}">Profile</p></a>
@@ -207,7 +207,7 @@
                             </div>
                             <ul class="list-unstyled p-1">
                                 <li class="dropdown-item py-2">
-                                    <a href="#" class="text-body ms-0">
+                                    <a href="/system/profile" class="text-body ms-0">
                                         <i class="me-2 icon-md" data-feather="user"></i>
                                         <span th:text="#{kafka.eagle.header.profile}">Profile</span>
                                     </a>
