add: kafka broker list

--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -65,9 +65,9 @@
                     </a>
                     <div class="submenu">
                         <ul class="submenu-item">
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.clusters.kafka}">Kafka</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.clusters.server}">Server</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.clusters.manager}">Manager</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/clusters/kafka" th:text="#{kafka.eagle.clusters.kafka}">Kafka</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/clusters/server" th:text="#{kafka.eagle.clusters.server}">Server</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/clusters/manage" th:text="#{kafka.eagle.clusters.manager}">Manager</a></li>
                         </ul>
                     </div>
                 </li>
