add: consumer group view

--- a/efak-web/src/main/resources/templates/dataspace/dashboard.html
+++ b/efak-web/src/main/resources/templates/dataspace/dashboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Dashboard - KafkaEagle</title>
+    <title th:text="#{kafka.eagle.dashboard.title.desc}"></title>
 
     <th:block th:replace="public/common :: css"></th:block>
 </head>
