--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -52,8 +52,8 @@
                     </a>
                     <div class="submenu">
                         <ul class="submenu-item">
-                            <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.consumers.group.overview}">Overview</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#" th:text="#{kafka.eagle.consumers.group.detail}">Detail</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/consumer/summary" th:text="#{kafka.eagle.consumers.group.summary}">Overview</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/consumer/detail" th:text="#{kafka.eagle.consumers.group.detail}">Detail</a></li>
                         </ul>
                     </div>
                 </li>
