add: quartz task view

--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -127,6 +127,7 @@
                                 <span sec:authorize="hasRole('ADMIN')">
                                     <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.system.user}"></a></li>
                                     <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.system.role}"></a></li>
+                                    <li class="nav-item"><a class="nav-link" href="/system/job" th:text="#{kafka.eagle.system.job}"></a></li>
                                 </span>
                             </span>
                             <li class="nav-item"><a class="nav-link" href="/system/audit" th:text="#{kafka.eagle.system.audit}"></a></li>
