--- a/efak-web/src/main/resources/templates/system/job.html
+++ b/efak-web/src/main/resources/templates/system/job.html
@@ -9,6 +9,7 @@
     <title th:text="#{kafka.eagle.system.job.title}">Job - KafkaEagle</title>
 
     <link rel="stylesheet" th:href="@{../../assets/vendors/datatables.net-bs5/dataTables.bootstrap5.css}">
+    <link rel="stylesheet" th:href="@{../../assets/vendors/select2/select2.min.css}">
 
     <th:block th:replace="public/common :: css"></th:block>
 
@@ -40,7 +41,8 @@
                             <h6 class="card-title" th:text="#{kafka.eagle.system.job}"></h6>
                             <p class="text-muted mb-3" th:utext="#{kafka.eagle.system.job.desc}"></p>
                                                         <div style="float: right!important;margin-top: -88px;">
-                                                            <button id="efak_system_job_btn" type="button" class="btn btn-primary btn-sm"
+                                                            <button id="efak_system_job_btn" type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal"
+                                                                    data-bs-target="#efak_system_job_add_modal" data-bs-whatever=""
                                                                     th:text="#{kafka.eagle.system.job.btn}"></button>
                                                         </div>
                             <div class="table-responsive">
@@ -63,42 +65,84 @@
         <!-- partial -->
     </div>
 
-    <!-- add partitions -->
-    <div class="modal fade" id="efak_topic_partition_add_modal" tabindex="-1" aria-labelledby="varyingModalLabel"
+    <!-- add job -->
+    <div class="modal fade" id="efak_system_job_add_modal" tabindex="-1" aria-labelledby="varyingModalLabel"
          aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="varyingModalLabel"
-                        th:utext="#{kafka.eagle.topic.manage.partition.add}"></h5>
+                        th:utext="#{kafka.eagle.system.job.btn.add}"></h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="btn-close"></button>
                 </div>
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="efak_topic_name_manage" class="form-label"
-                               th:utext="#{kafka.eagle.topic.manage.name.add}"></label>
-                        <input type="text" class="form-control" id="efak_topic_name_manage"
-                               name="efak_topic_name_manage" readonly/>
-                        <input type="hidden" class="form-control" id="efak_clusterid" name="efak_clusterid_name">
+                        <label for="efak_system_job_group_name" class="form-label"
+                               th:utext="#{kafka.eagle.system.job.group}"></label>
+                        <input type="text" class="form-control" id="efak_system_job_group_name"
+                               name="efak_system_job_group_name" readonly th:value="#{kafka.eagle.system.job.group.name}"/>
                     </div>
                     <div class="mb-3">
-                        <label for="efak_topic_name_manage_partition_current" class="form-label"
-                               th:utext="#{kafka.eagle.topic.manage.partition.add.current}">Partition:</label>
-                        <input type="text" class="form-control" id="efak_topic_name_manage_partition_current"
-                               name="efak_topic_name_manage_partition_current">
+                        <label for="efak_system_job_task_name" class="form-label"
+                               th:utext="#{kafka.eagle.system.job.task}"></label>
+                        <select id="efak_system_job_task_name" class="form-select" data-width="100%">
+                        </select>
+                        <input type="hidden" id="efak_system_job_task_name_hidden" />
                     </div>
                     <div class="mb-3">
-                        <label for="efak_topic_name_manage_partition_new" class="form-label"
-                               th:utext="#{kafka.eagle.topic.manage.partition.add.new}">NewPartition:</label>
-                        <input type="text" class="form-control" id="efak_topic_name_manage_partition_new"
-                               name="efak_topic_name_manage_partition_new">
+                        <label for="efak_system_job_cron_name" class="form-label"
+                               th:utext="#{kafka.eagle.system.job.cron}"></label>
+                        <input type="text" class="form-control" id="efak_system_job_cron_name"
+                               name="efak_system_job_cron_name" th:placeholder="#{kafka.eagle.system.job.cron.placeholder}">
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
                             th:text="#{kafka.eagle.clusters.manage.button.close}">Close
                     </button>
-                    <button type="button" id="efak_topic_add_partition_submit" class="btn btn-primary"
+                    <button type="button" id="efak_system_job_submit" class="btn btn-primary"
+                            th:text="#{kafka.eagle.clusters.manage.button.submit}">Submit
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- edit job -->
+    <div class="modal fade" id="efak_system_job_edit_modal" tabindex="-1" aria-labelledby="varyingModalLabelEdit"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="varyingModalLabelEdit"
+                        th:utext="#{kafka.eagle.system.job.btn.add}"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="btn-close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="efak_system_job_group_name_edit" class="form-label"
+                               th:utext="#{kafka.eagle.system.job.group}"></label>
+                        <input type="text" class="form-control" id="efak_system_job_group_name_edit"
+                               name="efak_system_job_group_name_edit" readonly th:value="#{kafka.eagle.system.job.group.name}"/>
+                    </div>
+                    <div class="mb-3">
+                        <label for="efak_system_job_task_name_edit" class="form-label"
+                               th:utext="#{kafka.eagle.system.job.task}"></label>
+                        <input type="text" class="form-control" id="efak_system_job_task_name_edit"
+                               name="efak_system_job_task_name_edit" readonly />
+                    </div>
+                    <div class="mb-3">
+                        <label for="efak_system_job_cron_name_edit" class="form-label"
+                               th:utext="#{kafka.eagle.system.job.cron}"></label>
+                        <input type="text" class="form-control" id="efak_system_job_cron_name_edit"
+                               name="efak_system_job_cron_name_edit" >
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                            th:text="#{kafka.eagle.clusters.manage.button.close}">Close
+                    </button>
+                    <button type="button" id="efak_system_job_edit_submit" class="btn btn-primary"
                             th:text="#{kafka.eagle.clusters.manage.button.submit}">Submit
                     </button>
                 </div>
@@ -113,7 +157,8 @@
 <!-- plugins:js -->
 <script th:src="@{../../assets/vendors/datatables.net/jquery.dataTables.js}"></script>
 <script th:src="@{../../assets/vendors/datatables.net-bs5/dataTables.bootstrap5.js}"></script>
-<script th:src="@{../assets/js/topic/topic.manage.js}"></script>
+<script th:src="@{../../assets/vendors/select2/select2.min.js}"></script>
+<script th:src="@{../assets/js/system/system.job.js}"></script>
 
 </body>
 </html>
