add kafka mbean check

--- a/efak-web/src/main/resources/templates/public/navbar.html
+++ b/efak-web/src/main/resources/templates/public/navbar.html
@@ -81,8 +81,8 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <ul class="submenu-item pe-md-0">
-                                    <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.monitor.mbean}">MBean</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.monitor.kafka}">Kafka</a></li>
+<!--                                    <li class="nav-item"><a class="nav-link" href="" th:text="#{kafka.eagle.monitor.mbean}">MBean</a></li>-->
+                                    <li class="nav-item"><a class="nav-link" href="/monitor/kafka" th:text="#{kafka.eagle.monitor.kafka}">Kafka</a></li>
                                         <li class="nav-item"><a class="nav-link" href="/monitor/produce" th:text="#{kafka.eagle.monitor.produce}">Topic</a></li>
                                 </ul>
                             </div>
